# Momentum_Rotation

./: .gitignore  1.ipynb  CLAUDE.md  adata_test.py  backtester.py  choose.ipynb  config.py  core.py  data.py  data_loader.py  dingtalk.env  draw.py  engine.py  etf_data_cache.csv  etf_data_cache_expanded.csv  etf_data_cache_expanded_closes.csv  etf_data_cache_expanded_opens.csv  etf_data_closes.csv  etf_data_opens.csv  etf_data_volumes.csv  live.py  live_signal.py  logging.conf  main.py  notifier.py  pure_momentum_report.html  pure_momentum_rotation.py  pyproject.toml  readme.md  requirements.txt  risk_managed_momentum_strategy_report.html  risk_managed_momentum_strategy_report_raw.html  run.py  run_research.py  strategy.py  strategy_dual_momentum_report.html  test.ipynb  tmp.ipynb  wfa.py
core/: base.py  data.py  engine.py  strategies.py
factors/: __init__.py  bias.py  library.py  momentum.py  momentum_castle.py  peak.py  reversion.py  volatility.py
infra/: __init__.py  repo.py
infra/fetchers/: __init__.py  akshare.py  baostock.py  base.py
logics/: __init__.py  bias_protection.py  factor_rotation.py  weighted_rotation.py
strategies/: pure_momentum_strategy.py  risk_managed_momentum_strategy.py
utils/: __init__.py  const.py  decorators.py  tools.py
