[project]
name = "momentum-rotation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "akshare==1.18.30",
    "pandas==2.3.3",
    "quantstats==0.0.77",
    "Requests==2.32.5",
    "tenacity>=9.1.2",
    "pyarrow>=21.0.0",
    "dotenv>=0.9.9",
    "cachetools==6.2.4",
    "notebook>=7.4.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pandas-stubs>=2.2.3.250308",
    "pyarrow-stubs>=17.19",
    "pytest>=8.4.1",
    "types-cachetools>=5.5.0.20240820",
    "types-tqdm>=4.67.0.20250401",
]
